--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "MartianGrotesk";
+  src: url("../fonts/MartianGrotesk.ttf") format("truetype");
+  /* You can specify additional font properties here if needed */
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
