--- a/ETH-London-2024/src/app/globals.css
+++ b/ETH-London-2024/src/app/globals.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "MartianGrotesk";
+  src: url("../../fonts/MartianGrotesk.ttf") format("truetype");
+}
+
 :root {
   background-color: #181818;
   color: rgba(255, 255, 255, 0.87);
