--- a/ETH-London-2024/src/app/globals.css
+++ b/ETH-London-2024/src/app/globals.css
@@ -4,23 +4,29 @@
 }
 
 :root {
-  background-color: #181818;
-  color: rgba(255, 255, 255, 0.87);
+  /* background-color: #181818; */
+  /* color: rgba(255, 255, 255, 0.87); */
   color-scheme: light dark;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-synthesis: none;
   font-weight: 400;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
+  position: relative;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  background:
+    linear-gradient(rgba(29, 29, 29, 0.7), rgba(32, 32, 32, 0.9)),
+    url("/background.webp") center/cover no-repeat;
+  z-index: -1;
+  height: 100vh; /* Set the height of the container to 100vh */
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     background-color: #f8f8f8;
-    color: #181818;
+    color: #ffffff;
   }
 }
